fixed amount label sizing on mobile

--- a/style.css
+++ b/style.css
@@ -114,17 +114,16 @@ main{
     display: none;
     text-align: center;
     background-color: var(--darkBrown);
-    height: 33px;
-    margin-bottom: 8px;
-    padding-top: 6px;
-    border-radius: 5px;
+    border-radius: 3px;
+    margin-bottom: 6px;
+    padding-bottom: 2px;
+    padding-top: 1px;
 }
 
 .amount-display label{
     color: var(--cream);
     font-weight: 700;
-    font-size: 18px;
-
+    font-size: 14px;
 }
 
 .amount-display-active{
@@ -250,6 +249,19 @@ footer{
         font-size: 15px;
         margin-top: 8px;
     }
+
+    .amount-display{
+        height: 33px;
+        margin-bottom: 8px;
+        padding-top: 6px;
+        padding-bottom: unset;
+        border-radius: 5px;
+    }
+
+    .amount-display label{
+        font-size: 18px;
+    }
+
 
 
     hr{
